<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" >
      <TextView android:id="@+id/view_call_incall_audio_textView_info" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:textStyle="bold" android:textColor="@color/color_white" android:layout_width="fill_parent" android:gravity="center_horizontal" android:text="In Call"  android:textSize="30dp" android:layout_marginBottom="5px"></TextView>
      <RelativeLayout android:layout_below="@+id/view_call_incall_audio_textView_info" android:layout_height="wrap_content" android:id="@+id/view_call_incall_audio_relativeLayout_avatar" android:layout_width="fill_parent" android:layout_marginTop="15px">
          <ImageView android:id="@+id/view_call_incall_audio_imageView_avatar" android:layout_height="wrap_content"  android:layout_margin="5px" android:layout_width="wrap_content" android:layout_gravity="center" android:layout_centerInParent="true" android:src="@drawable/calling_image"></ImageView>
          <TextView android:id="@+id/view_call_incall_audio_textView_duration"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="00:00" android:textStyle="bold" android:textColor="@color/color_white" android:textSize="15dp" android:gravity="bottom" android:layout_toRightOf="@+id/view_call_incall_audio_imageView_avatar"></TextView>
      </RelativeLayout>
    <TextView android:id="@+id/view_call_incall_audio_textView_remote" android:layout_height="wrap_content" android:text="John Doe" android:textStyle="bold" android:textColor="@color/color_white" android:gravity="center_horizontal" android:layout_width="fill_parent"  android:layout_alignRight="@+id/view_call_incall_audio_relativeLayout_avatar" android:layout_below="@+id/view_call_incall_audio_relativeLayout_avatar" android:layout_alignLeft="@+id/view_call_incall_audio_relativeLayout_avatar" android:textSize="25dp" android:layout_marginBottom="5px" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:layout_marginTop="10px"></TextView>
    <LinearLayout android:layout_width="fill_parent" android:weightSum="10" android:id="@+id/view_call_trying_linearLayout_pick_or_hang" android:layout_height="wrap_content" android:layout_margin="3px" android:layout_below="@+id/view_call_incall_audio_textView_remote" android:gravity="center_horizontal">
        <ImageButton android:id="@+id/view_call_incall_audio_imageButton_hang" style="@style/CallButton" android:layout_width="70px" android:layout_height="70px" android:layout_weight="3"  android:paddingLeft="5px" android:src="@drawable/phone_hang_up_48"></ImageButton>
        <ToggleButton android:text="Decline" android:textOn="@string/string_resume"
			  android:textOff="@string/string_hold" style="@style/CallButton" android:layout_toRightOf="@+id/view_call_incall_audio_imageButton_hang" android:id="@+id/toggle1" android:layout_width="70px" android:layout_height="70px" android:layout_weight="3"  android:paddingLeft="5px" android:src="@drawable/phone_hang_up_48"></ToggleButton>
    </LinearLayout>
    <LinearLayout  android:layout_width="fill_parent" android:id="@+id/view_call_trying_linearLayout_pick_or_hang1" android:layout_below="@+id/view_call_trying_linearLayout_pick_or_hang" android:gravity="center_horizontal" android:weightSum="10" android:layout_height="wrap_content" android:layout_marginBottom="3px" android:layout_marginLeft="3px" android:layout_marginRight="3px" android:layout_marginTop="10px">
    <ToggleButton  android:text="Decline" android:textOn="@string/string_speaker_on"
		android:textOff="@string/string_speaker_off" style="@style/CallButton" android:id="@+id/toggle2" android:layout_toRightOf="@+id/toggle1" android:layout_width="70px" android:layout_height="70px" android:layout_weight="3"  android:paddingLeft="5px" android:src="@drawable/phone_hang_up_48"></ToggleButton> 
    <ToggleButton android:text="Decline" android:textOn="@string/string_stop_video"
			  android:textOff="@string/string_send_video" style="@style/CallButton" android:id="@+id/toggle3" android:layout_toRightOf="@+id/toggle2" android:layout_width="70px" android:layout_height="70px" android:layout_weight="3"  android:paddingLeft="5px" android:src="@drawable/phone_hang_up_48"></ToggleButton>
        
    </LinearLayout>
    <SlidingDrawer android:layout_width="fill_parent" android:layout_height="fill_parent" android:handle="@+id/handle" android:content="@+id/content" android:layout_below="@+id/sview_call_trying_imageView_avatar" android:layout_alignLeft="@+id/sview_call_trying_imageView_avatar" android:layout_alignRight="@+id/sview_call_trying_imageView_avatar" android:id="@+id/view_call_incall_audio_slidingDrawer" android:visibility="visible">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/handle" android:visibility="visible" android:text="Keyboard"></Button>
        <LinearLayout android:id="@+id/content" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include android:id="@+id/view_call_incall_audio_keyboard" layout="@layout/view_dialer_buttons" android:layout_weight="2" android:layout_margin="2px" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
        </LinearLayout>
    </SlidingDrawer>
</RelativeLayout>
